--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<default.package>com.yoe.openapiexample.presentation</default.package>
+		<compiler-plugin.version>3.10.1</compiler-plugin.version>
 	</properties>
 	<dependencies>
 
@@ -152,15 +154,17 @@
 						<configuration>
 							<inputSpec>${project.basedir}/src/main/resources/openapi/openapi.yaml</inputSpec>
 							<generatorName>spring</generatorName>
+
 							<generateApiTests>false</generateApiTests>
 							<generateModelTests>false</generateModelTests>
 							<generateApiDocumentation>false</generateApiDocumentation>
+							<apiPackage>${default.package}</apiPackage>
+							<modelPackage>${default.package}.views</modelPackage>
+							<invokerPackage>${default.package}</invokerPackage>
+							<output>${basedir}/target/generated-sources</output>
 							<configOptions>
 								<delegatePattern>true</delegatePattern>
-								<serializableModel>true</serializableModel>
-								<dateLibrary>java17</dateLibrary>
-								<apiPackage>com.openapi.gen.springboot.api</apiPackage>
-								<modelPackage>com.openapi.gen.springboot.dto</modelPackage>
+								<dateLibrary>java</dateLibrary>
 							</configOptions>
 							<typeMappings>
 								<typeMapping>OffsetDateTime=LocalDateTime</typeMapping>
@@ -171,6 +175,28 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${compiler-plugin.version}</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+
 			</plugin>
 		</plugins>
 	</build>
